--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 </div>
 
 <script>
-  // 【注意】請填入您的 LIFF ID
-  const MY_LIFF_ID = '2008555385-0D1eLEbY'; 
+  // 【注意】請填入您的  ID
+  const MY_LIFF_ID = '2008555385-honVqqwb'; 
 
   let currentUser = { name:'', phone:'', courses:0, tickets:0 };
   let selectedPlan = ''; 
