--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <script>
   // 【請務必修改】填入您正確的 LIFF ID (例如: 1657xxxxxx-AbCdEfGh)
-  const MY_LIFF_ID = '2008555385-0D1eLEbY'; 
+  const MY_LIFF_ID = "2008555385-honVqqwb"; 
 
   let currentUser = { name:'', phone:'', courses:0, tickets:0 };
   let selectedPlan = ''; 
