change logo name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div id="view-login" class="view active">
     <div style="text-align:center; margin-top:40px; padding: 0 20px;">
       
-      <img src="./images/IMG_7577.PNG" 
+      <img src="./images/Logo.PNG" 
            alt="筋摩獵人 Logo" 
            style="width: 150px; height: auto; display: block; margin: 0 auto 15px auto; filter: drop-shadow(0 4px 4px rgba(0,0,0,0.15));">
 
